# yomotsusaka

./: .env.example  .gitignore  AGENTS.md  LICENSE  README.md  pyproject.toml
.github/workflows/: gatekeeper.yml
config/: model.example.yaml  policy.example.yaml
docs/: architecture.md  backend-promotion.md  chikaeshi.md  error-taxonomy.md  gate-keeper.md  naming.md  runpod-agent-lifecycle.md  runpod-agent-smoke.md  runpod-notes.md  runpod.md  scaffold-status.md
policy/: repo-rules.md
scripts/: manage_runpod.py  run_nightly_batch.sh  smoke_runpod.py
scripts/gatekeeper/: _common.py  check_agents_md.py  check_docs_commands.py  check_docs_links.py  check_documented_env_vars.py  check_lifecycle_invariant.py  check_readme_provenance.py  check_spec_values.py  check_vocab_drift.py
src/yomotsusaka/: __init__.py  audit.py  (+25 more)
tests/: _exposure_denylist.py  test_audit.py  test_batch_queue.py  test_batch_runner.py  test_boundary_locator.py  test_boundary_operations.py  test_boundary_private_isolation.py  test_boundary_registry_drift.py  test_error_taxonomy_doc.py  test_execution_gateway.py  test_exposure_contract.py  test_exposure_contract_mvp3.py  test_facade.py  test_facade_tenant.py  test_gatekeeper_agents_md.py  test_gatekeeper_docs_commands.py  test_gatekeeper_docs_links.py  test_gatekeeper_documented_env_vars.py  test_gatekeeper_lifecycle_invariant.py  test_gatekeeper_readme_provenance.py  test_gatekeeper_spec_values.py  test_gatekeeper_vocab_drift.py  test_operational_report.py  test_operational_smoke_taxonomy_drift.py  test_operational_taxonomy.py  test_persistence_boundary.py  test_pipeline.py  test_redactor.py  test_resolver.py  test_restoration_api.py  test_restoration_boundary.py  test_restoration_policy.py  test_restoration_request.py  test_runpod_lifecycle.py  test_schemas.py  test_scrubber.py  test_search_gateway.py  test_smoke_runpod_diagnose.py  test_span_proposer.py  test_templates.py  (+4 more)
(+45 files in other folders)
