[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "yomotsusaka"
version = "0.1.0"
description = "Best-effort private data firewall for agent workflows"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
dependencies = [
    "pydantic>=2.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.4",
]

[tool.hatch.build.targets.wheel]
packages = ["src/yomotsusaka"]

[tool.ruff]
line-length = 100
src = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
