[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "yomotsusaka"
version = "0.1.0"
description = "Best-effort private data firewall for agent workflows"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
dependencies = [
    "pydantic>=2.0",
    "pyyaml>=6.0",
    "httpx>=0.27",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-httpx>=0.30",
    "ruff>=0.4",
]

[tool.hatch.build.targets.wheel]
packages = ["src/yomotsusaka"]

# Pin the demo-corpus package-data files explicitly. Hatchling auto-includes
# all files under ``src/yomotsusaka/`` by default, but listing the .txt
# fixtures here keeps the contract visible: ``operational_smoke
# --demo-corpus`` resolves them via ``importlib.resources``, so they MUST
# ship inside the wheel even when the build defaults change.
[tool.hatch.build.targets.wheel.force-include]
"src/yomotsusaka/cli/_demo_corpus/canonical_employee.txt" = "yomotsusaka/cli/_demo_corpus/canonical_employee.txt"
"src/yomotsusaka/cli/_demo_corpus/multi_mention.txt" = "yomotsusaka/cli/_demo_corpus/multi_mention.txt"

[tool.ruff]
line-length = 100
src = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
